Fixing `Pagination` spacing.

--- a/src/modules/reusable/components/Pagination/Pagination.css
+++ b/src/modules/reusable/components/Pagination/Pagination.css
@@ -1,42 +1,43 @@
 .pagination-container {
-  display: block; }
-  @media only screen and (min-width: 540px) {
-    .pagination-container {
-      display: flex;
-      align-items: baseline; } }
-  @media only screen and (min-width: 620px) {
-    .pagination-container {
-      display: grid;
-      grid-column-gap: 1rem;
-      grid-auto-columns: 130px auto 130px; } }
-
+  display: block;
+}
+@media only screen and (min-width: 540px) {
+  .pagination-container {
+    align-items: baseline;
+    display: flex;
+  }
+}
+@media only screen and (min-width: 620px) {
+  .pagination-container {
+    display: grid;
+    grid-auto-columns: 1fr auto 1fr;
+    grid-column-gap: 1rem;
+  }
+}
+.pagination-container > * {
+  grid-row: 1;
+}
 .pagination-input-container {
-  margin: 0;
-  display: flex;
   align-items: baseline;
-  margin: 0.5rem 0;
-  justify-self: center;
-  grid-row: 1;
-  grid-column: 2 / 3; }
-  @media only screen and (min-width: 540px) {
-    .pagination-input-container {
-      margin: 0; } }
-
-.pagination-prev-container {
-  grid-row: 1;
-  grid-column: 1 / 2; }
-
-.pagination-next-container {
-  grid-row: 1;
-  grid-column: 3 / 4;
-  justify-self: end; }
-
-.pagination-input {
   display: flex;
-  width: 5rem;
-  margin: 0 0.5rem;
-  text-align: center;
-  padding: 0.15rem;
+  justify-self: center;
+  margin: 0.5rem 0;
+}
+@media only screen and (min-width: 540px) {
+  .pagination-input-container {
+      margin: 0;
+  }
+}
+.pagination-next-container {
+  justify-self: end;
+}
+.pagination-input {
   border: solid 1px rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
   box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.08);
-  border-radius: 4px; }
+  display: flex;
+  margin: 0 0.5rem;
+  padding: 0.15rem;
+  text-align: center;
+  width: 5rem;
+}
